<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HandstandFragment">

    <TextView
        android:id="@+id/commentCount2"
        android:layout_width="28dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:text="15"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/likeIcon"
        app:layout_constraintTop_toBottomOf="@+id/contentView" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:src="@drawable/stars"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginStart="56dp"
        android:src="@drawable/stars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:src="@drawable/stars"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:src="@drawable/stars"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <TextView
        android:id="@+id/titleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HandstandPushup"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="21dp"
        android:layout_height="19dp"
        android:src="@drawable/stars"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <TextView
        android:id="@+id/txtStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/star5"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/titleContent" />

    <TextView
        android:id="@+id/contentView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/contentHandsups"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStar" />

    <ImageView
        android:id="@+id/likeIcon"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/like"
        app:layout_constraintStart_toEndOf="@+id/commentCount"
        app:layout_constraintTop_toBottomOf="@+id/contentView" />

    <ImageView
        android:id="@+id/commentIcon"
        android:layout_width="51dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentView" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/usera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commentCount2"
        app:layout_constraintTop_toBottomOf="@+id/contentView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:src="@drawable/userb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/contentView"
        app:layout_constraintVertical_bias="0.009" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/morelike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/contentView" />

    <TextView
        android:id="@+id/commentCount"
        android:layout_width="28dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:text="15"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/commentIcon"
        app:layout_constraintTop_toBottomOf="@+id/contentView" />

</androidx.constraintlayout.widget.ConstraintLayout>